Remove orgName pipe and its logic

--- a/apps/catalog/catalog/src/app/dashboard/sales/shell/shell.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/sales/shell/shell.component.html
@@ -16,7 +16,7 @@
         <div fxLayout fxLayoutAlign="start center" fxLayoutGap="16px">
           <img height="100" width="100" [ref]="org?.logo" asset="empty_organization.svg" type="logo"
             alt="Organization Logo">
-          <h1>{{ org | orgName }}</h1>
+          <h1>{{ org.name }}</h1>
         </div>
       </ng-container>
 
