--- a/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
@@ -6,7 +6,7 @@
     <p>
       Select the time window you're interested in to add it to your Selection. For periods that are not licensed, feel
       free to
-      <a [routerLink]="['/c/o/marketplace/organization', org.id, 'member']">contact {{ org | orgName }}</a>.
+      <a [routerLink]="['/c/o/marketplace/organization', org.id, 'member']">contact {{ org.name }}</a>.
     </p>
 
   </ng-container>
