--- a/libs/user/src/lib/auth/pages/profile-view/profile-view.component.html
+++ b/libs/user/src/lib/auth/pages/profile-view/profile-view.component.html
@@ -5,7 +5,7 @@
       <div class="user-info" *ngIf="organization$ | async as org">
         <h1>{{ user.firstName }} {{ user.lastName }}</h1>
         <ng-container *ngIf="user.position && org.denomination">
-          <p class="mat-body-2">{{ user.position }} at {{ org | orgName }}</p>
+          <p class="mat-body-2">{{ user.position }} at {{ org.name }}</p>
         </ng-container>
       </div>
     </article>
