--- a/apps/crm/crm/src/app/crm/components/guest-table/guest-table.component.html
+++ b/apps/crm/crm/src/app/crm/components/guest-table/guest-table.component.html
@@ -8,7 +8,7 @@
   <ng-template colRef="guestOrg" label="Guest org" let-guestOrg>
     <ng-container *ngIf="guestOrg else noOrg">
       <a [routerLink]="['/c/o/dashboard/crm/organization', guestOrg.id]">
-        <span>{{ guestOrg | orgName:'long' }}</span>
+        <span>{{ guestOrg.name }}</span>
         <mat-icon svgIcon="visibility"></mat-icon>
       </a>
     </ng-container>
