--- a/apps/crm/crm/src/app/crm/components/invitation-list/invitation-list.component.html
+++ b/apps/crm/crm/src/app/crm/components/invitation-list/invitation-list.component.html
@@ -4,7 +4,7 @@
   </ng-template>
   <ng-template colRef="org" label="Organization" let-org>
     <a [routerLink]="['/c/o/dashboard/crm/organization', org.id]">
-      <span>{{ org | orgName:'long' }} </span>
+      <span>{{ org.name }} </span>
       <mat-icon svgIcon="visibility"></mat-icon>
     </a>
   </ng-template>
@@ -38,7 +38,7 @@
   <ng-template colRef="guestOrg" label="Guest org" let-guestOrg>
     <ng-container *ngIf="guestOrg else noOrg">
       <a [routerLink]="['/c/o/dashboard/crm/organization', guestOrg.id]">
-        <span>{{ guestOrg | orgName:'long' }} </span>
+        <span>{{ guestOrg.name }} </span>
         <mat-icon svgIcon="visibility"></mat-icon>
       </a>
     </ng-container>
