--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -11,7 +11,7 @@
 
       <div>
         <h4>{{ user | displayName }}</h4>
-        <h1>{{ user.org | orgName }}</h1>
+        <h1>{{ user.org.name }}</h1>
         <h5>{{ user.org.activity | toLabel:'orgActivity' }}</h5>
 
         <a mat-button [href]="'mailto:' + user.email">
