--- a/libs/organization/src/lib/organization/components/card-minimal/card-minimal.component.html
+++ b/libs/organization/src/lib/organization/components/card-minimal/card-minimal.component.html
@@ -2,5 +2,5 @@
   <img [ref]="org.logo" asset="empty_organization.svg" type="logo" alt="organization logo">
 </a>
 <div fxLayout="column" fxLayoutAlign="center center">
-  <h5>{{ org | orgName }}</h5>
+  <h5>{{ org.name }}</h5>
 </div>
