--- a/libs/organization/src/lib/organization/components/chip/chip.component.html
+++ b/libs/organization/src/lib/organization/components/chip/chip.component.html
@@ -1,4 +1,4 @@
 <a matRipple [routerLink]="[baseUrl, org?.id]">
   <img height="40" width="40" [ref]="org?.logo" asset="empty_organization.svg" type="logo" alt="Organization Logo">
-  <span class="mat-body-1"><b>{{ org | orgName }}</b></span>
+  <span class="mat-body-1"><b>{{ org.name }}</b></span>
 </a>
