--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -117,6 +117,41 @@
             </ng-template>
           </bf-table>
         </section>
+
+        <section>
+          <div class="heading">
+            <h3>
+              <span>Last Screenings</span>
+              <mat-icon svgIcon="info"></mat-icon>
+            </h3>
+            <ng-container *ngIf="ongoingScreenings$ | async as invitations">
+              <a  ongoing-event-button href="/c/o/dashboard/event/{{invitations[0].eventId}}/statistics">Ongoing Screenings</a>
+            </ng-container>
+          </div>
+          <div class="surface">
+            <span>"O" meaning the user left the screening right away.</span>
+            <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
+            <div class="space-between">
+              <h5>Attendees</h5>
+              <button mat-button (click)="exportScreenerAnalytics()">Export to .CSV</button>
+            </div>
+            <bf-table class="screenings" [source]="invitations$ | async" clickable useFilter pagination="50">
+              <ng-template colRef="toUser" label="Name" let-item="item" sort defaultSort>
+                <b>{{ item.toUser.firstName }} {{ item.toUser.lastName }}</b>
+              </ng-template>
+              <ng-template colRef="toUser.email" label="Email" let-email sort defaultSort>
+                <span>{{ email }}</span>
+              </ng-template>
+              <ng-template colRef="toUserOrg.denomination.public" label="Company Name" let-name sort defaultSort>
+                <span>{{ name }}</span>
+              </ng-template>
+              <ng-template colRef="toUserOrg.activity" label="Activity" let-activity sort defaultSort>
+                <span>{{ activity }}</span>
+              </ng-template>
+            </bf-table>
+          </div>
+        </section>
+
       </ng-container>
     </ng-container>
   </ng-container>
