--- a/libs/user/src/lib/auth/pages/identity/identity.component.scss
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.scss
@@ -45,7 +45,7 @@ section {
   article.surface {
     padding: 36px;
 
-    mat-form-field {
+    mat-form-field, password-input {
       width: 100%;
     }
 
