--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -67,7 +67,6 @@
       </ng-template>
     </bf-table>
   </ng-container>
-
 </ng-container>
 
 <ng-template #loading>
@@ -77,21 +76,5 @@
 </ng-template>
 
 <ng-template #empty>
-  <section fxLayout="column" fxLayoutAlign="center center">
-    <dashboard-no-title></dashboard-no-title>
-    <article fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="24px">
-      <mat-card class="no-title-card" fxLayout="column" fxLayoutalign="center center">
-        <img asset="add_title.svg" alt="Add title image">
-        <a routerLink="lobby" mat-button color="primary">Add one Title</a>
-      </mat-card>
-      <mat-card class="no-title-card" fxLayout="column">
-        <img asset="add_files.svg" alt="Upload files image">
-        <a routerLink="../import" mat-button color="primary">Import Titles in bulk</a>
-      </mat-card>
-    </article>
-    <h3>Or</h3>
-    <button (click)="openIntercom()" mat-flat-button color="primary">
-      Contact the {{ app | appName }} team
-    </button>
-  </section>
+  <dashboard-empty-movie appName="{{ app | appName }}"></dashboard-empty-movie>
 </ng-template>
