--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.html
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.html
@@ -77,7 +77,7 @@
 
     <article *ngIf="movie.promotional.still_photo.length">
       <h2>Images</h2>
-      <bf-carousel [columns]="3">
+      <bf-carousel [columns]="{ gtMd: 3, md: 2, sm: 2, xs: 1 }">
         <ng-container *ngFor="let photo of movie.promotional.still_photo; let i = index">
           <ng-template carouselItem>
             <img [ref]="photo" asset="empty_still_photo.svg" loading="eager" (click)="fullscreen(movie.promotional.still_photo, i)">
