--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -115,7 +115,7 @@
             New password with more than <strong>24</strong> characters.
           </mat-error>
           <mat-error *ngIf="form.hasError('currentPasswordMatch')">
-            Your new password has to be <strong>different</strong> than invitation pass.
+            Your new password has to be <strong>different</strong> than Invitation Pass.
           </mat-error>
         </password-input>
 
