--- a/libs/campaign/src/lib/components/perk-card/perk-card.component.scss
+++ b/libs/campaign/src/lib/components/perk-card/perk-card.component.scss
@@ -13,12 +13,16 @@ p {
   margin-right: 16px;
 }
 
-mat-card p {
-  height: 120px;
-  width: 100%;
-  text-overflow: ellipsis;
-  overflow-wrap: break-word;
-  overflow: hidden;
+mat-card  {
+  height: 100%;
+
+  p {
+    height: 120px;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow-wrap: break-word;
+    overflow: hidden;
+  }
 }
 
 
