--- a/libs/campaign/src/lib/marketplace/investment/investment.component.scss
+++ b/libs/campaign/src/lib/marketplace/investment/investment.component.scss
@@ -6,3 +6,9 @@
 mat-divider {
   margin: 24px 0;
 }
+
+.privileges {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  grid-gap: 16px;
+}
