--- a/libs/ui/src/lib/layout/event/event.component.html
+++ b/libs/ui/src/lib/layout/event/event.component.html
@@ -9,7 +9,7 @@
     <ng-content select="aside"></ng-content>
   </mat-sidenav>
   
-  <mat-sidenav-content fxLayout="column" [appContainer]="app" (toggle)="sidenav.toggle()" layout>
+  <mat-sidenav-content fxLayout="column" [appContainer]="app" (toggle)="sidenav.toggle()">
     <!-- TOOLBAR -->
     <app-bar #app>
       <header fxLayout fxLayoutAlign="start center">
