--- a/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.scss
@@ -15,7 +15,7 @@ mat-divider {
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
   grid-gap: 16px;
   margin: 24px;
 }
