--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -99,3 +99,8 @@ analytics-map h3{
 bf-table.screenings{
   margin-top: 24px;
 }
+
+a[mat-stroked-button]{
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
