--- a/libs/campaign/src/lib/marketplace/investment/investment.component.scss
+++ b/libs/campaign/src/lib/marketplace/investment/investment.component.scss
@@ -9,6 +9,6 @@ mat-divider {
 
 .privileges {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 16px;
 }
