--- a/libs/movie/src/lib/movie/marketplace/main/main.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.scss
@@ -34,7 +34,7 @@ h5 {
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 16px;
   margin: 24px;
 }
