--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
@@ -9,7 +9,7 @@ footer {
 
   ul.files {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 16px;
     margin: 24px;
 
