--- a/libs/ui/src/lib/list/page/list-page.component.scss
+++ b/libs/ui/src/lib/list/page/list-page.component.scss
@@ -41,7 +41,7 @@ section {
 
 ul {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 16px;
   margin: 24px;
 }
