--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
@@ -29,3 +29,28 @@ section {
 .film-page-button {
   height: fit-content;
 }
+
+
+.heading{
+  margin-bottom: 16px;
+  h3{
+    display: flex;
+    align-items: center;
+  }
+}
+
+.heading,
+.space-between{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+bf-table.screenings{
+  margin-top: 24px;
+}
+
+a[mat-stroked-button]{
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
