--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -42,20 +42,7 @@
       </ng-template>
       <ng-template colRef="campaignStarted" label="Campaign Started" let-date sort>{{ date | date: 'short' }}</ng-template>
       <ng-template colRef label="Actions" let-movie sticky>
-        <a [routerLink]="movie.id" mat-icon-button matTooltip="View">
-          <mat-icon svgIcon="visibility"></mat-icon>
-        </a>
-        <a [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]" mat-icon-button matTooltip="Edit">
-          <mat-icon svgIcon="edit"></mat-icon>
-        </a>
-        <button *ngIf="movie.app[app].status === 'archived' else archive" type="button" mat-icon-button (click)="updateStatus(movie, 'draft', 'Title restored.')" matTooltip="Restore">
-          <mat-icon svgIcon="restore"></mat-icon>
-        </button>
-        <ng-template #archive>
-          <button type="button" mat-icon-button (click)="updateStatus(movie, 'archived')" matTooltip="Archive">
-            <mat-icon svgIcon="archive"></mat-icon>
-          </button>
-        </ng-template>
+        <dashboard-movie-table-actions [movie]="movie" [app]="app"></dashboard-movie-table-actions>
       </ng-template>
     </bf-table>
   </ng-container>
